--- a/client/src/styles/header.sass
+++ b/client/src/styles/header.sass
@@ -1,10 +1,30 @@
 .headerWrapper
     display: flex
     align-items: center
-    justify-content: space-between
     height: 75px
 .burgerMenu
     padding-left: 20px
     font-size: 19px
     width: 15px
     cursor: pointer
+.headerWrapper__tools
+    display: flex
+    margin-left: auto
+    margin-right: 3vw
+.headerWrapper__button
+    color: #ffffff
+    display: inline-block
+    font-weight: 400
+    text-align: center
+    vertical-align: center
+    border: 1px solid
+    padding: .2rem 1.8rem .375rem 1.2rem
+    font-style: 1rem
+    font-weight: bold
+    border-radius: 5rem
+    background-color: rgb(85, 132, 255)
+    &::before
+        content: "+"
+        color: rgb(166, 191, 255)
+        margin-right: 5px
+        font-size: 20px
