add icons & basic group lists

--- a/client/src/styles/header.sass
+++ b/client/src/styles/header.sass
@@ -2,12 +2,13 @@
 .headerWrapper
     display: flex
     align-items: center
-    height: 75px
+    height: 11.2vh
 .burgerMenu
     padding-left: 20px
     font-size: 19px
     width: 15px
     cursor: pointer
+    color: rgb(14,26,53)
 .headerWrapper__tools
     display: flex
     margin-left: auto
